# shared-auth-lib

./: .coverage  .dockerignore  .env  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/may-23/changelogs/: hr-attendance-permissions-changes.md
shared_auth_lib/: __init__.py  _dev_headers.py  config.py  exceptions.py  logging.py
shared_auth_lib/authz/: __init__.py  capability.py
shared_auth_lib/constants/: __init__.py  headers.py  roles.py
shared_auth_lib/dependencies/: __init__.py  auth_dependencies.py
shared_auth_lib/middleware/: __init__.py  hmac_middleware.py  identity_middleware.py
shared_auth_lib/models/: __init__.py  auth_context.py
shared_auth_lib/permissions/: __init__.py  _registry.py  admin.py  auth.py  cms.py  dld.py  finance.py  hr.py  lead.py  listing.py  lms.py  media.py  scraping.py  task.py
shared_auth_lib/services/: __init__.py  auth_context_client.py  hmac_verifier.py
tests/: conftest.py  test_auth_context_client.py  test_auth_context_field_freeze.py  test_auth_dependencies.py  test_capability.py  test_dev_mode_bypass.py  test_hmac_middleware.py  test_hmac_verifier.py  test_identity_middleware.py  test_models.py  test_permission_matching.py  test_permission_registry.py  test_permissions.py  test_role_validation.py  test_roles.py  test_version_parity.py
